// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieDescription component Should render according to the snapshot with extra information provider 1`] = `
<div>
  <div
    class="movie-card__desc"
  >
    <h2
      class="movie-card__title"
    >
      fakeTitle
    </h2>
    <p
      class="movie-card__meta"
    >
      <span
        class="movie-card__genre"
      >
        fakeGenre
      </span>
      <span
        class="movie-card__year"
      >
        2021
      </span>
    </p>
    <div
      class="movie-card__buttons"
    >
      <button
        class="btn btn--play movie-card__button"
        type="button"
      >
        <svg
          height="19"
          viewBox="0 0 19 19"
          width="19"
        >
          <use
            xlink:href="#play-s"
          />
        </svg>
        <span>
          Play
        </span>
      </button>
      fakeChildren
    </div>
  </div>
</div>
`;

exports[`MovieDescription component Should render according to the snapshot with extra information provider 2`] = `
<div>
  <div
    class="movie-card__desc"
  >
    <h2
      class="movie-card__title"
    >
      fakeTitle
    </h2>
    <p
      class="movie-card__meta"
    >
      <span
        class="movie-card__genre"
      >
        fakeGenre
      </span>
      <span
        class="movie-card__year"
      >
        2021
      </span>
    </p>
    <div
      class="movie-card__buttons"
    >
      <button
        class="btn btn--play movie-card__button"
        type="button"
      >
        <svg
          height="19"
          viewBox="0 0 19 19"
          width="19"
        >
          <use
            xlink:href="#play-s"
          />
        </svg>
        <span>
          Play
        </span>
      </button>
      fakeChildren
    </div>
  </div>
</div>
`;

exports[`MovieDescription component Should render according to the snapshot with extra information provider 3`] = `
<div>
  <div
    class="movie-card__desc"
  >
    <h2
      class="movie-card__title"
    >
      fakeTitle
    </h2>
    <p
      class="movie-card__meta"
    >
      <span
        class="movie-card__genre"
      >
        fakeGenre
      </span>
      <span
        class="movie-card__year"
      >
        2021
      </span>
    </p>
    <div
      class="movie-card__buttons"
    >
      <button
        class="btn btn--play movie-card__button"
        type="button"
      >
        <svg
          height="19"
          viewBox="0 0 19 19"
          width="19"
        >
          <use
            xlink:href="#play-s"
          />
        </svg>
        <span>
          Play
        </span>
      </button>
      fakeChildren
    </div>
  </div>
</div>
`;

exports[`MovieDescription component Should render according to the snapshot with only movie id provider 1`] = `
<div>
  <div
    class="movie-card__desc"
  >
    <h2
      class="movie-card__title"
    />
    <p
      class="movie-card__meta"
    >
      
      
    </p>
    <div
      class="movie-card__buttons"
    >
      <button
        class="btn btn--play movie-card__button"
        type="button"
      >
        <svg
          height="19"
          viewBox="0 0 19 19"
          width="19"
        >
          <use
            xlink:href="#play-s"
          />
        </svg>
        <span>
          Play
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`MovieDescription component Should render according to the snapshot with only movie id provider 2`] = `
<div>
  <div
    class="movie-card__desc"
  >
    <h2
      class="movie-card__title"
    />
    <p
      class="movie-card__meta"
    >
      
      
    </p>
    <div
      class="movie-card__buttons"
    >
      <button
        class="btn btn--play movie-card__button"
        type="button"
      >
        <svg
          height="19"
          viewBox="0 0 19 19"
          width="19"
        >
          <use
            xlink:href="#play-s"
          />
        </svg>
        <span>
          Play
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`MovieDescription component Should render according to the snapshot with only movie id provider 3`] = `
<div>
  <div
    class="movie-card__desc"
  >
    <h2
      class="movie-card__title"
    />
    <p
      class="movie-card__meta"
    >
      
      
    </p>
    <div
      class="movie-card__buttons"
    >
      <button
        class="btn btn--play movie-card__button"
        type="button"
      >
        <svg
          height="19"
          viewBox="0 0 19 19"
          width="19"
        >
          <use
            xlink:href="#play-s"
          />
        </svg>
        <span>
          Play
        </span>
      </button>
    </div>
  </div>
</div>
`;
